--- a/projeto-bd/src/main/resources/static/exame-form.html
+++ b/projeto-bd/src/main/resources/static/exame-form.html
@@ -97,7 +97,7 @@
       <a href="home.html">PremaImagem</a>
     </div>
     <div class="links">
-      <a href="empregado-lista.html">Empregados</a>
+      <a href="paciente-lista.html">Pacientes</a>
       <a href="medico-lista.html">Médicos</a>
       <a href="exame-lista.html">Exames</a>
     </div>
@@ -165,7 +165,6 @@
       });
 
       if (response.ok) {
-        alert("Exame salvo com sucesso!");
         window.location.href = "exame-lista.html";
       } else {
         alert("Erro ao salvar exame");
