--- a/projeto-bd/src/main/resources/static/home.html
+++ b/projeto-bd/src/main/resources/static/home.html
@@ -39,16 +39,16 @@
     <h1>Entidades do Sistema</h1>
     
     <div class="button-container">
-        <button onclick="location.href='empregado-lista.html'">Empregado</button>
+       <!-- <button onclick="location.href='empregado-lista.html'">Empregado</button>
         <button onclick="location.href='socio-lista.html'">Sócio</button>
-        <button onclick="location.href='medico-lista.html'">Médico</button>
-        <button onclick="location.href='paciente-lista.html'">Paciente</button>
-        <button onclick="location.href='pagamento-lista.html'">Pagamento</button>
-        <button onclick="location.href='agendaexame-lista.html'">Agenda de Exames</button>
-        <button onclick="location.href='exame-lista.html'">Exames</button>
-        <button onclick="location.href='produto-lista.html'">Produtos</button>
         <button onclick="location.href='fornecedor-lista.html'">Fornecedor</button>
-        <button onclick="location.href='venda-lista.html'">Venda</button>
+        <button onclick="location.href='produto-lista.html'">Produto</button>
+        <button onclick="location.href='pagamento-lista.html'">Pagamento</button>-->
+        <button onclick="location.href='agenda-exame-lista.html'">Agenda de Exames</button><!--
+        <button onclick="location.href='venda-lista.html'">Venda</button> -->
+        <button onclick="location.href='paciente-lista.html'">Paciente</button>
+        <button onclick="location.href='medico-lista.html'">Medico</button>
+        <button onclick="location.href='exame-lista.html'">Exame</button>
     </div>
 
 </body>
