--- a/projeto-bd/src/main/resources/static/medico-detalhes.html
+++ b/projeto-bd/src/main/resources/static/medico-detalhes.html
@@ -77,8 +77,7 @@
       <a href="home.html">PremaImagem</a>
     </div>
     <div class="links">
-      <a href="colaborador-lista.html">Colaboradores</a>
-      <a href="empregado-lista.html">Empregados</a>
+      <a href="paciente-lista.html">Pacientes</a>
       <a href="medico-lista.html">Médicos</a>
       <a href="exame-lista.html">Exames</a>
     </div>
@@ -94,15 +93,19 @@
   </div>
 
   <div class="actions">
-    <button onclick="location.href='medico-lista.html'">Voltar para Lista</button>
-    <button onclick="location.href='medico-form.html?id=' + medicoId">Editar Médico</button>
+    <!-- Usando medicoId em vez de exameId -->
+    <button onclick="window.location.href='medico-form.html?id=' + medicoId">Editar</button>
+    <button onclick="deletarMedico()">Excluir</button>
+    <button onclick="window.location.href='medico-lista.html'">Voltar</button>
   </div>
 
   <script>
+    let medicoId; // variável declarada no escopo superior
+
     async function carregarDetalhesMedico() {
       const params = new URLSearchParams(window.location.search);
-      const id = params.get('id');
-      const response = await fetch(`http://localhost:8080/medicos/id/${id}`);
+      medicoId = params.get('id');
+      const response = await fetch(`http://localhost:8080/medicos/id/${medicoId}`);
 
       if (response.ok) {
         const medico = await response.json();
@@ -115,8 +118,20 @@
       }
     }
 
-    const params = new URLSearchParams(window.location.search);
-    const medicoId = params.get('id');
+    async function deletarMedico() {
+      if (confirm("Deseja realmente excluir este médico?")) {
+        const response = await fetch(`http://localhost:8080/medicos/id/${medicoId}`, {
+          method: "DELETE",
+        });
+
+        if (response.ok) {
+          alert("Médico deletado com sucesso.");
+          window.location.href = "medico-lista.html";
+        } else {
+          alert("Erro ao deletar médico.");
+        }
+      }
+    }
 
     document.addEventListener('DOMContentLoaded', carregarDetalhesMedico);
   </script>
