--- a/projeto-bd/src/main/resources/static/medico-form.html
+++ b/projeto-bd/src/main/resources/static/medico-form.html
@@ -104,7 +104,7 @@
             <a href="home.html">PremaImagem</a>
         </div>
         <div class="links">
-            <a href="empregado-lista.html">Empregados</a>
+            <a href="paciente-lista.html">Pacientes</a>
             <a href="medico-lista.html">Médicos</a>
             <a href="exame-lista.html">Exames</a>
         </div>
